--- a/hello.htm
+++ b/hello.htm
@@ -1,9 +1,10 @@
-<title>AAA</title>
+
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" media="all" href="lib/style.css" />
 	</head>
 	<body>
+		<!-- This is an unwanted but committed change -->
 		<h1>Hello, World!</h1>
 	</body>
 </html>
